--- a/jcine2017.tex
+++ b/jcine2017.tex
@@ -59,18 +59,18 @@ There is a clear role for technology to play in supporting this collaboration, e
 CSCL theory and research emphasises the role of technology in supporting learner participation, knowledge acquisition (information) and knowledge creation (knowledge objects and social practices)~\cite{lipponen:2004}.
 Much of the CSCL research base emphasises the importance of face to face interaction and the design of tasks and optimising the participation of learners~\cite{stahl:2014}.
 
-The growing interest in face-to-face collaboration by learners engaged in mutual negotiation of meaning (both procedural and factual) inspired the creation of the SynergyNet project\footnote{\url{https://community.dur.ac.uk/tel.lab/synergynet/}} at Durham University, an EPSRC/ESRC-funded research project to identify important technical and pedagogical challenges in the CSCL domain~\cite{higgins-et-al:2012}.
+The growing interest in face-to-face collaboration by learners engaged in mutual negotiation of meaning (both procedural and factual) inspired the creation of the {\emph{SynergyNet}} project\footnote{\url{https://community.dur.ac.uk/tel.lab/synergynet/}} at Durham University, an EPSRC/ESRC-funded research project to identify important technical and pedagogical challenges in the CSCL domain~\cite{higgins-et-al:2012}.
 Important technical challenges included the development of teacher orchestration tools which enabled seamless transition between individual spaces, group spaces and interactive whiteboards; these were respectively termed the private, shared and public spaces in the classroom by Dillenbourg and Evans~\cite{dillenbourg:2011}.
 They also identified the potential for a group to share information with other groups, building on the work of Everitt et al.~\cite{everitt:2006}.
-However, in this case the mechanism developed did not involve sharing between personal devices such as computers and a multi-touch table; rather, SynergyNet developed tools to allow sharing seamlessly between tables~\cite{hatch:2011b}.
+However, in this case the mechanism developed did not involve sharing between personal devices such as computers and a multi-touch table; rather, {\emph{SynergyNet}} developed tools to allow sharing seamlessly between tables~\cite{hatch:2011b}.
 
-Pedagogically, SynergyNet studies focused on schoolchildren aged 10-11 years old, working in collaborative groups nested within a lab-classroom.
+Pedagogically, {\emph{SynergyNet}} studies focused on schoolchildren aged 10-11 years old, working in collaborative groups nested within a lab-classroom.
 Data was collected on each group and each table as tasks were completed simultaneously.
 Data was also collected on the arrangement of the whole class and the teachers’ behaviour whilst supporting the activity.
 Studies showed that in tasks completed using multi-touch tables compared to tasks completed using paper-based equivalents, learners showed better uptake of ideas~\cite{mercier:2015}, showed evidence of more sophisticated reasoning  and differences in the amount of time spent in procedural rather than problem-focused talk~\cite{higgins-et-al:2012} in the multi-touch condition compared with the paper-based condition.
 Further studies highlighted the importance of the division of roles and showed different patterns of organisational and intellectual leadership in groups using mutli-touch tables~\cite{mercier2014d}, the importance of classroom layout for task completion~\cite{mercier:2014c}, the differences in teacher decision making process when shifting from group to whole-class dialogue~\cite{Joyce-Gibbons:2016}, the development of adaptive expertise among group members~\cite{mercier:2013} and the affordances of the tables to structure representations of reasoning processes~\cite{mercier:2014b}.
 
-The principal limitation of the original SynergyNet study was the fact that research was only ever conducted in the lab-classroom rather than in a real-world school environment, adapting to robust teacher and pupil use and also dealing with the technical challenges of the school's infrastructure.
+The principal limitation of the original {\emph{SynergyNet}} study was the fact that research was only ever conducted in the lab-classroom rather than in a real-world school environment, adapting to robust teacher and pupil use and also dealing with the technical challenges of the school's infrastructure.
 This is one of the chief priorities of the ongoing research agenda, to bring the tables into authentic classroom settings.
 
 Previous studies have been concerned with how the use of multiple large touch screen interfaces impacts on collaborative education in single environments, i.e. Individual classrooms~\cite{mohammed:2012,kreitmayer:2013,mercier:2015}.
@@ -87,16 +87,16 @@ This papers details the work done to support a trial that investigated the impac
 Furthermore, this paper represents a valuable case study of the technical aspects of implementing a research trial using these multi-touch devices, examining how technology was used to collect the wide range of research data, as well as the technical challenges faced.
 
 
-\section{SynergyNet}
+\section{{\emph{SynergyNet}}}
 
-As part of the wider SynergyNet project, a software framework\footnote{Available on GitHub: \url{https://github.com/synergynet}} was developed to support applications designed for multi-touch interfaces.
-This SynergyNet framework allowed any item in its supported applications to be moved and manipulated by users through common multi-touch gestures, as well as supporting communication between multiple interfaces via a network connection.
-The framework supports several different methods of transferring materials between instances of its apps; the use of networked interfaces allowed media-based content to be easily shared between multiple users, allowing both intra- and inter-group collaboration as show in early SynergyNet studies~\cite{mercier:2014b}.
-This feature was presented as a capability of the teacher orchestration tools within the SynergyNet classroom which allowed the teacher to decide when to instigate the transferral of content~\cite{alagha-et-al:2010,mercier:2016}.
+As part of the wider {\emph{SynergyNet}} project, a software framework\footnote{Available on GitHub: \url{https://github.com/synergynet}} was developed to support applications designed for multi-touch interfaces.
+This {\emph{SynergyNet}} framework allowed any item in its supported applications to be moved and manipulated by users through common multi-touch gestures, as well as supporting communication between multiple interfaces via a network connection.
+The framework supports several different methods of transferring materials between instances of its apps; the use of networked interfaces allowed media-based content to be easily shared between multiple users, allowing both intra- and inter-group collaboration as show in early {\emph{SynergyNet}} studies~\cite{mercier:2014b}.
+This feature was presented as a capability of the teacher orchestration tools within the {\emph{SynergyNet}} classroom which allowed the teacher to decide when to instigate the transferral of content~\cite{alagha-et-al:2010,mercier:2016}.
 An additional capability, called `Network Flick' was developed which allowed learners working at each table to ‘flick’ content (transfer content from one table to another by using a flicking gesture)~\cite{reetz-et-al:2006}.
 Whilst technically this was achievable in the lab-classroom, the co-location of all groups resulted in a study design which made the gesture’s capabilities pedagogically ineffective.
 
-Recent research building on the outcomes of the SynergyNet project has focused on developing the use of multi-touch tables for group work in multiple schools, resulting in the network flick gesture of the framework now having a pedagogical grounding and purpose.
+Recent research building on the outcomes of the {\emph{SynergyNet}} project has focused on developing the use of multi-touch tables for group work in multiple schools, resulting in the network flick gesture of the framework now having a pedagogical grounding and purpose.
 The project this research forms part of has resulting in the collaboration with two schools which are geographically distant in the UK (approximately 300 miles apart) -- one near the city of Durham in the north-east of England and the other near Caerphilly in south Wales.
 Despite their distance, the areas share an interesting common industrial heritage; specifically, they were at the heart of the coal mining industry which powered the industrial revolution.
 Latterly both areas have experienced significant post-industrial economic trauma with the closure of the mines and de-industrialisation.
@@ -135,22 +135,22 @@ Users are capable of choosing their recipient through the direction of the flick
 This is intended to reduce the cognitive load usually required to move content between interfaces.
 The potential benefit of this approach, by having a simple method to move content between interfaces, users will be more willing to share items as there is less of a barrier to sending and receiving.
 
-Though the network flick gesture has a number of potentially benefits, little use has previously been found for it; the feature has been present in the SynergyNet framework since its earliest versions, but very few apps utilise it.
+Though the network flick gesture has a number of potentially benefits, little use has previously been found for it; the feature has been present in the {\emph{SynergyNet}} framework since its earliest versions, but very few apps utilise it.
 While some apps that require the transfer of materials between interfaces do support the gesture, most encourage users to use other, more traditional, methods of sharing contents (such as placing items in shared areas or through using a context menu).
 
 ***{\emph{TC to find some more citations for below...}}***
 
 Previous studies have investigated the human-computer interaction and affective computing aspects of the network flick gesture, but none of these have entailed its use in a classroom environment.
-Typically, classroom-based studies with SynergyNet have utilised a remote teacher interface to orchestrate the transferral of content~\cite{joycegibbons:2016}.
+Typically, classroom-based studies with {\emph{SynergyNet}} have utilised a remote teacher interface to orchestrate the transferral of content~\cite{joycegibbons:2016}.
 Though the gesture is often used in the warm-up and cool-down sessions (to get participants used to interacting through the touch screen devices and as a form of play reward) during previous studies with UK Key Stage 1 and 2 students and has always been well received, there has been little data collected on its use by pupils as part of classroom activities.
 % Where it has been used, the network flick has always been performed to transfer content between two co-located interfaces previously.
 
 \subsection{Co-Location}
 
-The majority of SynergyNet features have been developed with co-located interfaces as the intended environment for their use.
-Often in the past, the apps developed for SynergyNet and key features for the framework itself have been created for specific research studies.
+The majority of {\emph{SynergyNet}} features have been developed with co-located interfaces as the intended environment for their use.
+Often in the past, the apps developed for {\emph{SynergyNet}} and key features for the framework itself have been created for specific research studies.
 As all of these studies have taken place in single environments, the features and apps of the framework were built assuming co-located environments.
-Though efforts were made to ensure that the SynergyNet framework was dynamic and adaptable as possible, functioning across multiple environments in separate locations was not a priority during its past development and as a consequence there are several shortcoming in the system design.
+Though efforts were made to ensure that the {\emph{SynergyNet}} framework was dynamic and adaptable as possible, functioning across multiple environments in separate locations was not a priority during its past development and as a consequence there are several shortcoming in the system design.
 This is apparent in both the visual and functional design of the framework and apps.
 
 Many of the interfaces presume that users will be together in the same environment and able to see each other's screen directly; this has a large impact on the design of visual elements, such as the menus; for example, the menu used by teachers to transfer content in previous studies assumes that the teacher is able to see pupil's interfaces so that they can choose which group's work they can display to the class.
@@ -162,20 +162,20 @@ The implications of not directly seeing the target interface when performing a n
 %\subsection{Virtual Private Networking}
 \subsection{Networking}
 
-As many of SynergyNet’s networking features -- including the network flick gesture -- are dependent on the devices being on the same local network, it became apparent that the most time-effective approach would be to emulate a local area network across a wider network (i.e. the internet).
+As many of {\emph{SynergyNet}}’s networking features -- including the network flick gesture -- are dependent on the devices being on the same local network, it became apparent that the most time-effective approach would be to emulate a local area network across a wider network (i.e. the internet).
 
 This course of action was decided upon as supporting direct communication across the internet would have required several of the framework’s features to be totally redeveloped which was not feasible in the time-frame of the study (as well as issues of approaching the end of the academic year where classes would have the availability to participate).
-After investigation, the most effective way to emulate a LAN was to utilise a virtual private network (VPN), allowing many of the features of a local network that SynergyNet relies on (such as shared folders), whilst still communicating across the wider internet.
+After investigation, the most effective way to emulate a LAN was to utilise a virtual private network (VPN), allowing many of the features of a local network that {\emph{SynergyNet}} relies on (such as shared folders), whilst still communicating across the wider internet.
 
 % removed citation~\cite{zerotier:2016}
 Though many VPN solutions are available, Zero-Tier\footnote{\url{https://www.zerotier.com}} was selected to provide network virtualisation services.
-This low-cost VPN solution is not a typical VPN, but fulfilled all the criteria needed to support the majority of SynergyNet’s networking features over the internet.
+This low-cost VPN solution is not a typical VPN, but fulfilled all the criteria needed to support the majority of {\emph{SynergyNet}}’s networking features over the internet.
 As only a small number of machines required to be connected to the same network in the trial (i.e. two; one touch-screen table-top interface for each site; the tablets used in the trial for the video conferencing did not need to be on the same network as the table-top interfaces and could just function as-is over the internet) it was not necessary to use feature-rich VPNs; though Zero-Tier may not be as secure as other VPN options, the trial did not involve any private data being transmitted between the two sites.
 
 It was originally intended that all devices used in the trial could be connected to the internet via the schools' own network infrastructure (both the tablets and table-top interfaces are capable of using wireless connections).
 However, during preparation for the trial it was discovered that the firewalls at both of the schools were explicitly blocking outbound VPN traffic relating to Zero-Tier.
 The use of the Zero-Tier VPN had been tested in environments with strict firewall policies (e.g. University networks) and had operated as expected; however, it appears that the school firewalls were locked down much more than anticipated, with extremely limited outbound connections allowed through the firewall.
-This meant that SynergyNet could not operate when connected to the Zero-Tier VPN when connected through the schools’ networks.
+This meant that {\emph{SynergyNet}} could not operate when connected to the Zero-Tier VPN when connected through the schools’ networks.
 Whilst adding exceptions to the firewalls would have allowed the VPN connections to function correctly, this was not feasible due to administrative issues with approval via the school and local education authority; therefore an alternative method of connecting to the internet was required.
 
 \subsection{Mobile Connectivity}
@@ -183,7 +183,7 @@ Whilst adding exceptions to the firewalls would have allowed the VPN connections
 Due to permission issues with the schools' own network infrastructure, an alternative method of connecting to the internet that would allow the table-top interfaces to function was identified using pay-as-you go 4G mobile ``dongles''.
 These could be connected via USB to the two table-tops to allow them to connect to the internet through a relatively fast mobile connection.
 However, do to the remote locations of each school, it was difficult to find decent coverage using a single mobile network, so the interfaces at both sites were connected to the internet through two different 4G providers.
-This had no noticeable impact or latency on the connection and allowed the instances of SynergyNet on both table-tops to interact quickly and with minimal data loss (for example, failed transmissions of messages between the instances would result in flicked items never arriving on their target device).
+This had no noticeable impact or latency on the connection and allowed the instances of {\emph{SynergyNet}} on both table-tops to interact quickly and with minimal data loss (for example, failed transmissions of messages between the instances would result in flicked items never arriving on their target device).
 % As the table-top interfaces were only to be used for the trial and the app's network usage is minimal, pay-as-you-go plans sufficed.
 The app only sends data when first finding other instances of the app and when a content transfer occurs; the first time any content is sent it is moved to the shared area on the network; afterwards, all subsequent transfers point back to the same item in the shared area, treating it like a cache.
 In addition to the trial's app, remote desktop controlling software, VNC, was also briefly used to and ensure both tables were set up on each site correctly before the trial started.
@@ -193,16 +193,16 @@ A 4G connection may not be as secure as using the school network but data to and
 
 \subsection{Multi-casting}
 
-SynergyNet up until now had used multicast service discovery as a method of finding other running instances of the framework on a network.
-However, many VPNs do not support the User Datagram Protocol (UDP) that SynergyNet employs.
+{\emph{SynergyNet}} up until now had used multicast service discovery as a method of finding other running instances of the framework on a network.
+However, many VPNs do not support the User Datagram Protocol (UDP) that {\emph{SynergyNet}} employs.
 Thus to accommodate this VPN constraint, the framework was modified to work purely through the more widely supported Transmission Control Protocol (TCP).
-This change meant that SynergyNet could no longer automatically detect other instances; at least one instance would need to be informed of the IP address of the other instance.
+This change meant that {\emph{SynergyNet}} could no longer automatically detect other instances; at least one instance would need to be informed of the IP address of the other instance.
 To support this a user interface was developed which allowed for the user to allocate participating device's IPs on the network.
-This update was initially a change at the app level but has since been integrated into the framework so that all apps on the latest version of SynergyNet~\cite{hatch:2011} can work across VPNs easier.
+This update was initially a change at the app level but has since been integrated into the framework so that all apps on the latest version of {\emph{SynergyNet}}~\cite{hatch:2011} can work across VPNs easier.
 
 \subsection{Other Technical Considerations}
 
-Both the design and the technical underpinnings of the SynergyNet framework and its apps been limited by the assumption of use across only co-located interfaces.
+Both the design and the technical underpinnings of the {\emph{SynergyNet}} framework and its apps been limited by the assumption of use across only co-located interfaces.
 The use of single environments in the past meant that the framework was always deployed across a single Local Area Network (LAN) in all studies; as there was no need previously for the framework to be able to work across anything beyond a LAN many of the features are not capable of functioning across the wider internet.
 
 % remove refs: ~\cite{igniterealtime:2016} and ~\cite{hazelcast:2016} 
@@ -214,15 +214,15 @@ The framework uses a shared network location as a form of cache, which was benef
 The secure use of a shared network location across a wider network, such as the internet, is inadvisable without precautions due to data security and latency of such a technique.
 It was therefore a requirement that some development work took place prior to the trial taking place to allow the framework, or at least the app used, to function over the internet as the two locations used would not be able to share a typical LAN.
 
-\section{Example SynergyNet Experiment: Two UK Primary Schools}
+\section{Example {\emph{SynergyNet}} Experiment: Two UK Primary Schools}
 
 ***{\emph{TC: Are we aiming to provide a methodology here, or an overview to the approach to aid understanding of the technical aspects for this paper?}}***
 
 For this trial, two groups of UK Key Stage 2 students (aged 9-10 years old) at separate locations were encouraged to work together on a classroom activity.
 As previously mentioned, one group was situated in a school in the north-east of England and the other in a school in South Wales.
 It was decided that the trial should take place near to the end of the academic year (summer term) to cause as little disruption to the teaching schedule as possible.
-The design of the trial was built on previous SynergyNet studies which meant that a lot of the preparation was already in place (i.e. the hardware, the supporting software framework and the tasks to be carried out).
-However, previous SynergyNet studies all took place in a single classroom environment, the trial's use of multiple locations meant that there were several new challenges in the set up to overcome during this short lead in time.
+The design of the trial was built on previous {\emph{SynergyNet}} studies which meant that a lot of the preparation was already in place (i.e. the hardware, the supporting software framework and the tasks to be carried out).
+However, previous {\emph{SynergyNet}} studies all took place in a single classroom environment, the trial's use of multiple locations meant that there were several new challenges in the set up to overcome during this short lead in time.
 Each group was allocated a large touch-screen table-top device (Samsung SUR40s) to work together on the collaborative activity; the landscape nature of the interfaces was chosen to allow multiple students to work around the devices at the same time.
 The two devices were networked together to share content between them, specifically through the network flick gesture.
 To allow the teams to communicate and to give them a direction to focus their flick gestures towards, a tablet was positioned by the tables along one side at both locations, using video-conferencing software (Skype) to allow the teams to see each other and communicate verbally.
@@ -245,22 +245,22 @@ With the virtual distance between the tables set to be as small as possible the 
 
 ***{\emph{TC: Do we need to explain this a bit more? (maybe not...)}}***
 
-The selected collaboration task for this trial was {\emph{Mysteries}}; a classroom activity where students use a selection of clues, such as snippets of text and images, to solve a problem or come to a conclusion about an open question; this task has been used in several previous SynergyNet studies~\cite{mercier:2013,mercier:2014,mercier:2015}.
+The selected collaboration task for this trial was {\emph{Mysteries}}; a classroom activity where students use a selection of clues, such as snippets of text and images, to solve a problem or come to a conclusion about an open question; this task has been used in several previous {\emph{SynergyNet}} studies~\cite{mercier:2013,mercier:2014,mercier:2015}.
 
 \begin{figure}[h]
  \centering
    \includegraphics[width=0.75\textwidth]{figures/flickmysteryexample.png}
-   \caption{The SynergyNet mysteries app with task content used in the trial.}
+   \caption{The {\emph{SynergyNet}} mysteries app with task content used in the trial.}
    \label{fig:FlickMysteryExample}
 \end{figure}
 
-Though {\emph{Mysteries}} is an existing task supported by several apps for the SynergyNet framework, none of them utilise the network flick gesture.
+Though {\emph{Mysteries}} is an existing task supported by several apps for the {\emph{SynergyNet}} framework, none of them utilise the network flick gesture.
 This required the creation of a new app which would manage the loading of the materials in a dynamic way (i.e. text snippets from a simple XML file and media from any other files in a folder, although video and audio clips are supported by the app only images were used in the trial alongside the text snippets to reduce potential confounding factors) and allow them to be transferred through the network gesture.
 The dynamic content system allowed for the app to be easily configured so that each site would have a different selection of clues for each mysteries task, forcing them to share content with the students at the remote location.
 Figure~\ref{fig:FlickMysteryExample} shows the app built for the trial with content relevant to the task dynamically-generated from an XML file ready for transfer via the network flick mechanism.
 
 
-\section{SynergyNet Data} 
+\section{{\emph{SynergyNet}} Data} 
 
 To collect relevant experimental data, the trial consisted of four sessions, each taking an average of 20 minutes.
 Throughout these sessions a wealth of data was collected in the form of recordings; these recordings were annotated and coded in a robust and consistent manner by the project team to provide quantitative data of the interactions.
@@ -270,7 +270,7 @@ This quantitative data could then be used alongside quantitative information, li
 
 Screen recording software was used to collect data during the experiment; this software was installed on both tablets allowing both sides of the video conferencing software used for communication between the groups to be recorded.
 In addition to this,stand-alone cameras were used at both locations to record in high-detail interactions with and around the table-top interfaces.
-Unfortunately, because SynergyNet uses OpenGL (a cross-language, cross-platform API for rendering 2D and 3D vector graphics) for its visual output, it was not possible to capture video easily from the screen for two main reasons: it is problematic if we wished to use a secondary device that the output is mirrored to, as the set-up on the table-top interfaces that used the display is integrated into the device and changing the visual output configuration is limited; also, it would impact on the performance of the device, which is not an acceptable occurrence as performance should be priority to ensure fewer barriers to intuitive interaction.
+Unfortunately, because {\emph{SynergyNet}} uses OpenGL (a cross-language, cross-platform API for rendering 2D and 3D vector graphics) for its visual output, it was not possible to capture video easily from the screen for two main reasons: it is problematic if we wished to use a secondary device that the output is mirrored to, as the set-up on the table-top interfaces that used the display is integrated into the device and changing the visual output configuration is limited; also, it would impact on the performance of the device, which is not an acceptable occurrence as performance should be priority to ensure fewer barriers to intuitive interaction.
 
 %\subsection{Data Collation}
 
@@ -300,12 +300,12 @@ This quantitative data, in addition to other more qualitative observations made 
 % removed citation~\cite{hatch:2011}
 Analysis of the outcomes from the study, particularly the wider pedagogical and social implications, are now underway and will be reported on in future papers; however, the process of preparing, running and collecting data from the trail has produced several tangible deliverables.
 Though SynergyView has been used before in previous research this is the first time it has been documented as being used across multiple sites.
-Another deliverable is the Flick Mysteries application for SynergyNet; this application is now available through the SynergyNet repository\footnote{Available on GitHub: \url{https://github.com/synergynet}} for any researcher who wishes to replicate the trial.
+Another deliverable is the Flick Mysteries application for {\emph{SynergyNet}}; this application is now available through the {\emph{SynergyNet}} repository\footnote{Available on GitHub: \url{https://github.com/synergynet}} for any researcher who wishes to replicate the trial.
 The app is designed to make configuration straightforward, as well as allowing for the creation of new trials based around different classroom tasks.
 
-The adaptation of the SynergyNet framework's networking features to work through a VPN is another tangible outcome of this work.
+The adaptation of the {\emph{SynergyNet}} framework's networking features to work through a VPN is another tangible outcome of this work.
 This now allows the framework, and any of the applications it supports, to be used across multiple sites, facilitating further research trials in collaboration between remote sites using natural user interfaces.
-Though the trial used a set of specific multi-touch table devices, the portability of the SynergyNet framework allows for it to be run on a range of different devices, including Windows tablets which are widely available.
+Though the trial used a set of specific multi-touch table devices, the portability of the {\emph{SynergyNet}} framework allows for it to be run on a range of different devices, including Windows tablets which are widely available.
 This affords the opportunity to deploy similar trials into a wide range of environments in the future with little reliance on the bespoke and expensive hardware available.
 Furthermore, the challenges of getting equipment to, then setting it up at, multiple locations can be overcome in future studies.
 
@@ -325,7 +325,7 @@ The updated version of SynergyView is now available for any researcher who wishe
 
 ***{\emph{TC: We need to tail this more strongly to identify the key technical contributions, as well as linking to any emerging policy?}}***
 
-With the changes to the framework made as part of the trial, SynergyNet is now better suited for use across the internet where a VPN is set up appropriately.
+With the changes to the framework made as part of the trial, {\emph{SynergyNet}} is now better suited for use across the internet where a VPN is set up appropriately.
 This allows for the tables used in the trial to be re-deployed anywhere where there is an acceptable 3G/4G signal or with an alternate network connection where the network is configured appropriately.
 This will enable for further trials using the framework and the tables used in the trial at separate sites.
 These further trials may involve following up any discoveries uncovered as part of the trial's data-analysis.
@@ -333,6 +333,6 @@ These further trials may involve following up any discoveries uncovered as part 
 ***{\emph{TC: Check refs, maybe a few more options here from both GB's and TC's previous work?}}***
 
 \bibliographystyle{ieeetr}
-\bibliography{jors2016}
+\bibliography{jcine2017}
 
 \end{document}
