--- a/jcine2017.bib
+++ b/jcine2017.bib
@@ -133,15 +133,13 @@
   author = {Emma M. Mercier and Steven E. Higgins}
 }
 
+% doi = {10.1080/1475939X.2016.1173089},
 @article{Joyce-Gibbons:2016,
 author = {Andrew Joyce-Gibbons},
 title = {Observe, interact and act: teachers’ initiation of mini-plenaries to scaffold small-group collaboration},
-journal = {Technology, Pedagogy and Education},
-volume = {0},
-number = {0},
+journal = {{Technology, Pedagogy and Education}},
 pages = {1-18},
-year = {0},
-doi = {10.1080/1475939X.2016.1173089},
+year = {2016}
 }
 
 @article{mercier:2016,
